# eventmodel

./: AGENTS.md  BACKLOG.md  README.md  pyproject.toml
.agents/instructions/: python.instructions.md
.agents/skills/refine-backlog/: SKILL.md
.agents/skills/review/: SKILL.md
.devcontainer/: devcontainer.json  post-create-command.sh
.github/workflows/: publish.yml  test.yml  validate.yml
examples/: batch.py  events.py  main.py  main_async.py  main_sync.py  parallel.py  services.py
examples/messager/: README.md  chat.py  models.py  server.py
src/eventmodel/: __init__.py  app.py  broker.py  config.py  logger.py  models.py  service.py  tracing.py
src/eventmodel/brokers/: asyncio_broker.py  nats_broker.py
tests/: smoke_test.py  test_app.py  test_batch.py  test_broker.py  test_models.py  test_service.py  test_tracing.py
