[project]
name = "eventmodel"
version = "0.0.0-alpha.1"
description = "Build type-safe, event-driven Python apps with zero boilerplate."
readme = "README.md"
authors = [
    { name = "Werner van der Merwe", email = "wvdm1217@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.12.5",
]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.10",
    "ty>=0.0.29",
]
