[project]
name = "python-eventmodel"
version = "0.0.0-alpha.2"
description = "Build type-safe, event-driven Python apps with zero boilerplate."
readme = "README.md"
authors = [
    { name = "Werner van der Merwe", email = "wvdm1217@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.12.5",
]

[project.optional-dependencies]
otel = [
    "opentelemetry-api>=1.0.0",
]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "eventmodel"

[dependency-groups]
dev = [
    "opentelemetry-api>=1.0.0",
    "opentelemetry-sdk>=1.0.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.10",
    "ty>=0.0.29",
]
nats = [
    "nats-py>=2.14.0",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"
